--- a/rock-paper-scissors-simulator/README.me
+++ b/rock-paper-scissors-simulator/README.me
@@ -1,1 +1,1 @@
-An object-oriented vanilla javascript code for a rock-paper-scissors simulation.
+#An object-oriented vanilla javascript code for a rock-paper-scissors simulation.
